@@ -1,6 +1,12 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
 2002-01-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* include/log4cpp/Category.hh, src/Category.cpp, 
+	tests/testCategory.cpp: merged in support for multiple Appenders,
+	contributed by Brendan B. Boerner.
+	* THANKS: Added Brendan.
+
+2002-01-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
 	* include/log4cpp/HierarchyMaintainer.hh, src/HierarchyMaintainer.cpp:
 	added getExistingInstance(std::string). 
 	* include/log4cpp/Category.hh, src/Category.cpp: 
